modified bar in responsive

--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
          </ul>
          
             <button class="contact">Contact</button>
+            <div class="icon">
+              <img src="assets/bars-3.png" alt="">
+            </div>
+
          
         </nav>
         <div class="bnner-container display-flex">
